--- a/practice/3.application-abstractions/4.resources/deployment-with-resources.yaml
+++ b/practice/3.application-abstractions/4.resources/deployment-with-resources.yaml
@@ -19,11 +19,13 @@ spec:
         name: nginx
         ports:
         - containerPort: 80
-        resources:
-          requests:
-            cpu: 10m
-            memory: 100Mi
-          limits:
+        resources: # ограничение ресурсов для пода
+          requests: # Количество ресурсов, к-ые резервируются для пода на ноде. При этом необязательно, что именно столько ест под. 
+          # Мы лишь указываем это для того, чтобы этот под добавился в ту ноду, которая потянет эти резервируемые ресурсы. 
+          # Соответственно, не отправит туда, где ресурсов меньше
+            cpu: 10m # (мили цпу. 1m - это 1/1000 от цпу одного ядра)
+            memory: 100Mi #(Mb)
+          limits: # максимальное ограничение - верхняя граница
             cpu: 100m
             memory: 100Mi
 ...
