--- a/practice/4.saving-configurations/2.secret/deployment-with-secret.yaml
+++ b/practice/4.saving-configurations/2.secret/deployment-with-secret.yaml
@@ -24,14 +24,16 @@ spec:
         envFrom:
         - configMapRef:
             name: my-configmap-env
+        # - secretRef: - тут тоже можно задавать
+        #     name: test
         env:
         - name: TEST
           value: foo
         - name: TEST_1
           valueFrom:
-            secretKeyRef:
-              name: test
-              key: test1
+            secretKeyRef: # хранение енв в секрете
+              name: test # Название секрета
+              key: test1 # Название переменной внутри секрета
         ports:
         - containerPort: 80
         resources:
