--- a/practice/4.saving-configurations/2.secret/secret.yaml
+++ b/practice/4.saving-configurations/2.secret/secret.yaml
@@ -1,4 +1,8 @@
 ---
+# Выглядит так же как конфигмап, только если вызвать
+# kubectl get secret test -o yaml - то поле data будет кодироваться в base64.
+# При этом не шифрование! Мыф всё равно можем прочитать, что находиться в data, 
+# используя echo dXBkYXRlZA== | base64 -d, просто хранится в другом виде
 apiVersion: v1
 kind: Secret
 metadata:
